force-app/main/default/objects/Partner_Signup_T_C_Agreement__c/Partner_Signup_T_C_Agreement__c.object-meta.xml
<CustomObject>
    <label>Partner Signup T&amp;C Agreement</label>
    <nameField>
        <displayFormat>A-{YY}{MM}{DD}{000}</displayFormat>
        <label>Partner Signup Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Signup T&amp;C Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>