force-app/main/default/objects/Partner_Signup_T_C_Agreement__c/fields/isAgree__c.field-meta.xml
<CustomField>
    <fullName>isAgree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAgree</label>
    <type>Checkbox</type>
</CustomField>