force-app/main/default/objects/Partner_Signup_T_C_Agreement__c/fields/Partner_Signup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Signup</label>
    <referenceTo>Partner_Signup_Request__c</referenceTo>
    <relationshipLabel>Partner Signup T&amp;C Agreements</relationshipLabel>
    <relationshipName>Partner_Signup_T_C_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>