force-app/main/default/objects/Partner_Signup_T_C_Agreement__c/fields/Partner_T_C_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_T_C_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner T&amp;C Name</label>
    <referenceTo>Partner_T_C_Master__c</referenceTo>
    <relationshipLabel>Partner Signup T&amp;C Agreements</relationshipLabel>
    <relationshipName>Partner_Signup_T_C_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>